# Pocket-bot

./: .env.example  .gitignore  API_ENDPOINTS_STATUS.md  API_TEST_REPORT.ps1  API_TEST_REPORT.txt  COMPREHENSIVE_API_TEST_REPORT.md  COMPREHENSIVE_TEST_SUMMARY.md  DATABASE_POPULATION_SUMMARY.md  DATABASE_TOOLS_INDEX.md  FINAL_TEST_SUMMARY.md  QUICK_START_DB.md  QUICK_TEST_REFERENCE.md  README.md  TESTING_SUMMARY_VISUAL.txt  TEST_ARTIFACTS_README.md  TEST_RESULTS_SUMMARY_TABLE.txt  final_summary.py  final_test.ps1  init_db.py  main.py  package-lock.json  package.json  populate_db.py  pyproject.toml  query_db.py  quick_test.ps1  sample_queries.sql  test_all_endpoints.ps1  test_data_integrity.py  test_endpoints.py  test_endpoints_v2.ps1  verify_db.py
backend/: PROJECT.md  app.py  conftest.py
backend/src/: __init__.py  main_api.py  wellness_engine.py
backend/src/burnout_prediction/: __init__.py  burnout_predictor.py  burnout_scenario_results.xlsx  feature_engineer.py  model_store.py  run_scenarios.py  schemas.py  score_combiner.py  test_burnout.py
backend/src/expense_management/: README.md  __init__.py  alert_system.py  (+9 more)
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  api.js  firebase.js  styles.css
database/: pocketbuddy.db  pocketbuddy.db-shm  pocketbuddy.db-wal
server/: gemini.js  index.js
server/database/: seed.js  setup.js
server/firebase/: README.md  admin.js
server/middleware/: auth.js
server/routes/: auth.js  burnout.js  expenses.js  food.js  routine.js  support.js  travel.js
tests/: seed_and_test.py
(+32 files in other folders)
