[project]
name = "poket-bot"
version = "0.1.0"
description = "Pocket Bot - Expense Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=7.4.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
